--- a/HomeMates/VIew/Task/AddingTaskHeaderViewCell.xib
+++ b/HomeMates/VIew/Task/AddingTaskHeaderViewCell.xib
@@ -13,57 +13,81 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" rowHeight="40" id="KGk-i7-Jjw" customClass="AddingTaskHeaderViewCell" customModule="HomeMates" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="none" indentationWidth="10" id="KGk-i7-Jjw" customClass="AddingTaskHeaderViewCell" customModule="HomeMates" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="375" height="93"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+            <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
+                <rect key="frame" x="0.0" y="0.0" width="375" height="92.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="每日任務" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fme-kp-rg8">
-                        <rect key="frame" x="20" y="20" width="69.5" height="7"/>
-                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                        <color key="textColor" name="Y4"/>
-                        <nil key="highlightedColor"/>
-                    </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="svW-RU-Pnd">
-                        <rect key="frame" x="20" y="42.5" width="335" height="1"/>
-                        <color key="backgroundColor" name="B1"/>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tWp-nl-rHL">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="76"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="svW-RU-Pnd">
+                                <rect key="frame" x="20" y="49" width="335" height="1"/>
+                                <color key="backgroundColor" name="B1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="VQk-iV-PKB"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="(每天執行的任務，系統將自動加入任務列表中)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="29d-JG-bAB">
+                                <rect key="frame" x="20" y="56" width="296" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Pxv-WC-EIa"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <color key="textColor" red="0.2901960784" green="0.22352941179999999" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="每日任務" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fme-kp-rg8">
+                                <rect key="frame" x="20" y="16.5" width="70" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="Y4"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Axp-hL-4DC">
+                                <rect key="frame" x="301" y="12" width="50" height="30"/>
+                                <color key="backgroundColor" name="Y1"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="50" id="0tC-8D-LPf"/>
+                                    <constraint firstAttribute="height" constant="30" id="8IQ-Cb-Gkm"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <state key="normal" title="新增">
+                                    <color key="titleColor" name="Y4"/>
+                                </state>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="1" id="VQk-iV-PKB"/>
+                            <constraint firstItem="29d-JG-bAB" firstAttribute="leading" secondItem="svW-RU-Pnd" secondAttribute="leading" id="6ws-YI-UDt"/>
+                            <constraint firstAttribute="trailing" secondItem="svW-RU-Pnd" secondAttribute="trailing" constant="20" id="9Qq-m0-hLm"/>
+                            <constraint firstAttribute="trailing" secondItem="Axp-hL-4DC" secondAttribute="trailing" constant="24" id="9SV-eI-7Pk"/>
+                            <constraint firstItem="Axp-hL-4DC" firstAttribute="top" secondItem="tWp-nl-rHL" secondAttribute="top" constant="12" id="BkN-Qb-cgU"/>
+                            <constraint firstAttribute="bottom" secondItem="29d-JG-bAB" secondAttribute="bottom" id="Jky-tX-sqD"/>
+                            <constraint firstItem="svW-RU-Pnd" firstAttribute="leading" secondItem="tWp-nl-rHL" secondAttribute="leading" constant="20" id="OZf-2V-tbs"/>
+                            <constraint firstAttribute="height" constant="76" id="Wt4-KZ-9s9"/>
+                            <constraint firstItem="29d-JG-bAB" firstAttribute="top" secondItem="svW-RU-Pnd" secondAttribute="bottom" constant="6" id="ZpO-qg-oYX"/>
+                            <constraint firstItem="svW-RU-Pnd" firstAttribute="top" secondItem="Axp-hL-4DC" secondAttribute="bottom" constant="7" id="ma0-Kg-WDg"/>
+                            <constraint firstItem="fme-kp-rg8" firstAttribute="centerY" secondItem="Axp-hL-4DC" secondAttribute="centerY" id="oBQ-NB-5pw"/>
+                            <constraint firstItem="fme-kp-rg8" firstAttribute="leading" secondItem="tWp-nl-rHL" secondAttribute="leading" constant="20" id="xka-rp-eLG"/>
                         </constraints>
                     </view>
-                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Axp-hL-4DC">
-                        <rect key="frame" x="289" y="8.5" width="50" height="30"/>
-                        <color key="backgroundColor" name="Y1"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="50" id="0tC-8D-LPf"/>
-                            <constraint firstAttribute="height" constant="30" id="8IQ-Cb-Gkm"/>
-                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="30" id="rpK-yj-k52"/>
-                        </constraints>
-                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
-                        <state key="normal" title="新增">
-                            <color key="titleColor" name="Y4"/>
-                        </state>
-                    </button>
                 </subviews>
                 <constraints>
-                    <constraint firstAttribute="trailing" secondItem="svW-RU-Pnd" secondAttribute="trailing" constant="20" id="3HW-cz-4xX"/>
-                    <constraint firstItem="svW-RU-Pnd" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="EYF-Jl-vfF"/>
-                    <constraint firstItem="fme-kp-rg8" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="20" id="M2X-3e-Lgz"/>
-                    <constraint firstAttribute="trailing" secondItem="Axp-hL-4DC" secondAttribute="trailing" constant="36" id="Ne2-w9-Yk9"/>
-                    <constraint firstItem="svW-RU-Pnd" firstAttribute="top" secondItem="Axp-hL-4DC" secondAttribute="bottom" constant="4" id="O1h-ul-AcR"/>
-                    <constraint firstItem="Axp-hL-4DC" firstAttribute="centerY" secondItem="fme-kp-rg8" secondAttribute="centerY" id="e7Q-0G-DGB"/>
-                    <constraint firstItem="fme-kp-rg8" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="20" id="lrg-Bi-cFv"/>
-                    <constraint firstAttribute="bottom" secondItem="svW-RU-Pnd" secondAttribute="bottom" id="z7t-Y0-qhS"/>
+                    <constraint firstItem="tWp-nl-rHL" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="4gj-Lx-VbS"/>
+                    <constraint firstItem="tWp-nl-rHL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="ETV-we-iQv"/>
+                    <constraint firstAttribute="bottom" secondItem="tWp-nl-rHL" secondAttribute="bottom" id="Kjn-bB-wYa"/>
+                    <constraint firstAttribute="trailing" secondItem="tWp-nl-rHL" secondAttribute="trailing" id="vTr-Tk-9uj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
             <connections>
                 <outlet property="addingTaskBtn" destination="Axp-hL-4DC" id="QOE-3Z-IiO"/>
+                <outlet property="guideLbl" destination="29d-JG-bAB" id="Hpg-sj-d1n"/>
                 <outlet property="titleNameLbl" destination="fme-kp-rg8" id="y9F-8e-0Ap"/>
             </connections>
-            <point key="canvasLocation" x="50.000000000000007" y="35.491071428571423"/>
+            <point key="canvasLocation" x="50.000000000000007" y="51.227678571428569"/>
         </tableViewCell>
     </objects>
     <resources>
