--- a/HomeMates/VIew/Base/TaskTableViewCell/PointGoalTableViewCell.xib
+++ b/HomeMates/VIew/Base/TaskTableViewCell/PointGoalTableViewCell.xib
@@ -35,7 +35,7 @@
                         <color key="textColor" name="Y4"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfx-5C-yjY">
+                    <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jfx-5C-yjY">
                         <rect key="frame" x="76" y="116.5" width="225" height="6"/>
                         <color key="backgroundColor" name="Y1"/>
                         <constraints>
