--- a/HomeMates/VIew/Lobby.storyboard
+++ b/HomeMates/VIew/Lobby.storyboard
@@ -46,11 +46,98 @@
                     <navigationItem key="navigationItem" id="xj5-wC-5dc"/>
                     <connections>
                         <outlet property="tableView" destination="yPU-2H-rY1" id="RiE-Nx-5nh"/>
+                        <segue destination="vJS-VE-AjH" kind="show" identifier="LobbySettingsSegue" id="yWp-UW-c5X"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5YO-aw-s41" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="788" y="-10.344827586206897"/>
+            <point key="canvasLocation" x="903" y="-10"/>
+        </scene>
+        <!--群組管理-->
+        <scene sceneID="rqT-3P-deY">
+            <objects>
+                <viewController hidesBottomBarWhenPushed="YES" id="vJS-VE-AjH" customClass="LobbySettingsViewController" customModule="HomeMates" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="34Z-6s-y9E">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Home_48px" translatesAutoresizingMaskIntoConstraints="NO" id="idq-Ee-uyT">
+                                <rect key="frame" x="147.5" y="84" width="80" height="80"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="80" id="Tif-hN-7WZ"/>
+                                    <constraint firstAttribute="width" constant="80" id="cPE-0V-slw"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Home ID: GroupID" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GNs-sp-xiL">
+                                <rect key="frame" x="118" y="217" width="139" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" name="B1"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qbp-la-C1j">
+                                <rect key="frame" x="248" y="177" width="20" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="Zbu-GY-ija"/>
+                                    <constraint firstAttribute="width" constant="20" id="yPX-l4-n8q"/>
+                                </constraints>
+                                <state key="normal" image="Editor_24px"/>
+                                <connections>
+                                    <action selector="clickEditBtn:" destination="vJS-VE-AjH" eventType="touchUpInside" id="uou-P0-BJG"/>
+                                </connections>
+                            </button>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" sectionFooterHeight="18" translatesAutoresizingMaskIntoConstraints="NO" id="HkG-ja-O0R">
+                                <rect key="frame" x="0.0" y="248" width="375" height="419"/>
+                                <color key="backgroundColor" name="W1"/>
+                                <connections>
+                                    <outlet property="dataSource" destination="vJS-VE-AjH" id="iGD-1N-yZs"/>
+                                    <outlet property="delegate" destination="vJS-VE-AjH" id="vrP-mc-O8f"/>
+                                </connections>
+                            </tableView>
+                            <textField opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="GroupName" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="GC7-Yi-r5l" customClass="HMBaseTextField" customModule="HomeMates" customModuleProvider="target">
+                                <rect key="frame" x="139" y="180" width="97" height="21"/>
+                                <color key="textColor" name="B1"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </textField>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5rh-pw-oAa">
+                                <rect key="frame" x="139" y="200" width="97" height="1"/>
+                                <color key="backgroundColor" name="B1"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="1" id="6nf-eN-daH"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="GC7-Yi-r5l" firstAttribute="centerX" secondItem="idq-Ee-uyT" secondAttribute="centerX" id="29h-w8-b5H"/>
+                            <constraint firstItem="LR4-YV-gkv" firstAttribute="trailing" secondItem="HkG-ja-O0R" secondAttribute="trailing" id="3Vx-5T-AfF"/>
+                            <constraint firstItem="GC7-Yi-r5l" firstAttribute="top" secondItem="idq-Ee-uyT" secondAttribute="bottom" constant="16" id="3zH-MR-fWK"/>
+                            <constraint firstItem="5rh-pw-oAa" firstAttribute="trailing" secondItem="GC7-Yi-r5l" secondAttribute="trailing" id="4xN-tT-KRc"/>
+                            <constraint firstItem="HkG-ja-O0R" firstAttribute="top" secondItem="GNs-sp-xiL" secondAttribute="bottom" constant="10" id="AS2-3G-PJ8"/>
+                            <constraint firstItem="GNs-sp-xiL" firstAttribute="top" secondItem="GC7-Yi-r5l" secondAttribute="bottom" constant="16" id="By9-xR-boI"/>
+                            <constraint firstItem="5rh-pw-oAa" firstAttribute="bottom" secondItem="GC7-Yi-r5l" secondAttribute="bottom" id="I49-zd-DfA"/>
+                            <constraint firstItem="LR4-YV-gkv" firstAttribute="bottom" secondItem="HkG-ja-O0R" secondAttribute="bottom" id="MQz-fm-aPD"/>
+                            <constraint firstItem="idq-Ee-uyT" firstAttribute="centerX" secondItem="34Z-6s-y9E" secondAttribute="centerX" id="OZa-9p-qpP"/>
+                            <constraint firstItem="5rh-pw-oAa" firstAttribute="leading" secondItem="GC7-Yi-r5l" secondAttribute="leading" id="Rlp-6k-CPV"/>
+                            <constraint firstItem="qbp-la-C1j" firstAttribute="bottom" secondItem="GC7-Yi-r5l" secondAttribute="bottom" constant="-4" id="TjS-i0-sei"/>
+                            <constraint firstItem="GNs-sp-xiL" firstAttribute="centerX" secondItem="34Z-6s-y9E" secondAttribute="centerX" id="e2u-74-Z6K"/>
+                            <constraint firstItem="HkG-ja-O0R" firstAttribute="leading" secondItem="LR4-YV-gkv" secondAttribute="leading" id="md4-O7-Heh"/>
+                            <constraint firstItem="idq-Ee-uyT" firstAttribute="top" secondItem="LR4-YV-gkv" secondAttribute="top" constant="20" id="rh3-1g-uUZ"/>
+                            <constraint firstItem="qbp-la-C1j" firstAttribute="leading" secondItem="GC7-Yi-r5l" secondAttribute="trailing" constant="12" id="ylC-AO-8hT"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="LR4-YV-gkv"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="群組管理" id="r8b-kZ-UeM"/>
+                    <connections>
+                        <outlet property="editButton" destination="qbp-la-C1j" id="5Jz-KE-Puc"/>
+                        <outlet property="groupIdLbl" destination="GNs-sp-xiL" id="qo0-vr-kbN"/>
+                        <outlet property="groupNameTextField" destination="GC7-Yi-r5l" id="xCw-k6-XIU"/>
+                        <outlet property="tableView" destination="HkG-ja-O0R" id="T2H-z6-15e"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uHc-Bx-PAh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1912.8" y="-10.344827586206897"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="sPU-tq-mz3">
@@ -60,6 +147,9 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Sy1-DO-Twv">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <textAttributes key="titleTextAttributes">
+                            <color key="textColor" red="0.29019607843137252" green="0.22352941176470587" blue="0.18431372549019609" alpha="1" colorSpace="calibratedRGB"/>
+                        </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -72,6 +162,11 @@
         </scene>
     </scenes>
     <resources>
+        <image name="Editor_24px" width="24" height="24"/>
+        <image name="Home_48px" width="48" height="48"/>
+        <namedColor name="B1">
+            <color red="0.27843137254901962" green="0.32156862745098042" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
         <namedColor name="W1">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
